force-app/main/default/objects/User/fields/Opt_Out_of_Community_Login_Tutorial__c.field-meta.xml
<CustomField>
    <fullName>Opt_Out_of_Community_Login_Tutorial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opt Out of Community Login Tutorial</label>
    <type>Checkbox</type>
</CustomField>