force-app/main/default/objects/User/validationRules/Home_Phone_Pattern_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Home_Phone_Pattern_Check</fullName>
    <active>true</active>
    <description>The home phone number must be numeric with &apos;+&apos; allowed and must be 10-12 digits</description>
    <errorConditionFormula>NOT(ISBLANK(Home_Phone__c)) &amp;&amp; NOT(REGEX(SUBSTITUTE(Home_Phone__c ,&apos; &apos;, &apos;&apos;) , &quot;\\+{0,1}[0-9]{10,12}&quot;))</errorConditionFormula>
    <errorMessage>Please enter a valid home phone number.</errorMessage>
</ValidationRule>