force-app/main/default/objects/User/validationRules/Mobile_Number_Pattern_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Mobile_Number_Pattern_Check</fullName>
    <active>true</active>
    <description>The mobile number must be numeric with &apos;+&apos; allowed and must be 10-12 digits</description>
    <errorConditionFormula>NOT(ISBLANK( MobilePhone )) &amp;&amp; NOT(REGEX(SUBSTITUTE( MobilePhone ,&apos; &apos;, &apos;&apos;) , &quot;\\+{0,1}[0-9]{10,12}&quot;))</errorConditionFormula>
    <errorMessage>Please enter a valid mobile number.</errorMessage>
</ValidationRule>