force-app/main/default/objects/User/validationRules/Participant_cannot_change_name.validationRule-meta.xml
<ValidationRule>
    <fullName>Participant_cannot_change_name</fullName>
    <active>true</active>
    <errorConditionFormula>AND(($Profile.Name = &apos;VHF Participant Community Plus User&apos;), 
   OR( ISCHANGED( FirstName ) , ISCHANGED( MiddleName ) ,  ISCHANGED( LastName ),  ISCHANGED( Suffix ) ,  ISCHANGED( Title )   ) )</errorConditionFormula>
    <errorMessage>To change the details of your name, please contact SRO</errorMessage>
</ValidationRule>