force-app/main/default/objects/User/validationRules/Phone_Pattern_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Pattern_Check</fullName>
    <active>true</active>
    <description>The phone number must be numeric with &apos;+&apos; allowed and must be 10-12 digits</description>
    <errorConditionFormula>NOT(ISBLANK(Phone)) &amp;&amp; NOT(REGEX( SUBSTITUTE(Phone,&apos; &apos;, &apos;&apos;) , &quot;\\+{0,1}[0-9]{10,12}&quot;))</errorConditionFormula>
    <errorMessage>Please enter a valid phone number.</errorMessage>
</ValidationRule>