force-app/main/default/objects/User/validationRules/Postal_Code_to_allow_only_Digits.validationRule-meta.xml
<ValidationRule>
    <fullName>Postal_Code_to_allow_only_Digits</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK(PostalCode)) &amp;&amp; !REGEX(PostalCode,&quot;^[0-9]{4}&quot;)</errorConditionFormula>
    <errorMessage>Please enter a valid Postal Code.</errorMessage>
</ValidationRule>